project/stage/tests/reject/wrong_array_size.ul
void main(){
  int[10] foo;
  int[11] bar;

  foo = bar;
  bar = foo;
}